...
                                </constraints>
                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                                <state key="normal" title="Skip tutorial">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b9x-dh-PFT">
                                <rect key="frame" x="272" y="528" width="32" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="TutorialNextButton1"/>
                                <state key="normal" title="Next">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                <rect key="frame" x="16" y="528" width="100" height="30"/>
                                <color key="backgroundColor" red="0.27450980390000002" green="0.50980392159999999" blue="0.70588235290000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="TutorialSkipButton2"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="dlJ-5f-ZHZ"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bq7-P0-SuP">
                                <rect key="frame" x="272" y="528" width="32" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="TutorialNextButton2"/>
                                <state key="normal" title="Next">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                        <rect key="frame" x="79" y="362" width="122" height="41"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <state key="normal" title="Get Started">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="serverName" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Any name you like" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UcY-p2-z0r">
                                                        <rect key="frame" x="111" y="0.0" width="169" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="TutorialServerNameTextField"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" constant="169" id="7Rs-dv-mYj"/>
...
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="hostAddress" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="http://yourserver.local" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2gc-he-2Gh">
                                                        <rect key="frame" x="111" y="0.0" width="169" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="TutorialHostAddressTextField"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" constant="169" id="NyL-e2-1he"/>
...
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="portNumber" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="e.g. 1234" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e3y-LT-4Z7">
                                                        <rect key="frame" x="111" y="0.0" width="169" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="TutorialPortNumberTextField"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" constant="169" id="Eqy-OQ-PHq"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jJR-EQ-sbb">
                                        <rect key="frame" x="102" y="350.5" width="76" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="TutorialAddServerButton"/>
                                        <state key="normal" title="Add Server">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                <rect key="frame" x="16" y="528" width="100" height="30"/>
                                <color key="backgroundColor" red="0.27450980390000002" green="0.50980392159999999" blue="0.70588235290000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="TutorialSkipButton3"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="Fwo-56-aPz"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UI9-3H-31M">
                                <rect key="frame" x="272" y="528" width="32" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="TutorialNextButton3"/>
                                <state key="normal" title="Next">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                <rect key="frame" x="16" y="528" width="100" height="30"/>
                                <color key="backgroundColor" red="0.27450980390000002" green="0.50980392159999999" blue="0.70588235290000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="TutorialSkipButton4"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="8T9-xh-81g"/>
...
