...
        server.userCommands.commands.append(newCommand)
        
        
        // Save settings
        settings.save()
        
        showAlert(message: "You successfully added the button \"\(buttonName)\". Feel free to add more. Tap \"Next\" when you are done.", title: "Well done!")
        
        buttonNameTextField.text = ""
        commandTextField.text = ""
        
    }

...
